// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

.emotion-5 {
  color: #574feb !important;
}

<div
  class="emotion-3 emotion-0 emotion-5 test fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

.emotion-5 {
  color: #574feb !important;
}

<div
  class="emotion-3 emotion-0 emotion-5 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

.emotion-3 {
  min-height: 100vh;
}

.emotion-3 {
  background-color: red;
}

<div
  class="emotion-3 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;
